--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,27 +1,25 @@
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form (submit)="onAddPost(postForm)" #postForm="ngForm"  *ngIf="!isLoading">
+  <form [formGroup]="form" (submit)="onAddPost()"  *ngIf="!isLoading">
     <mat-form-field>
       <input
       matInput
       type="text"
-      name="title"
-      [ngModel]="post?.title"
-      required
-      #title="ngModel"
+      formControlName="title"
       placeholder="Post title">
-      <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+      <mat-error *ngIf="form.get('title').invalid">Please enter a post title</mat-error>
     </mat-form-field>
+    <div>
+      <button mat-stroked-button type="button" (click)="filePicker.click()">Pick image</button>
+      <input type="file" #filePicker (change)="onImagePicked($event)">
+    </div>
     <mat-form-field>
       <textarea
       matInput
       rows="6"
-      name="content"
-      [ngModel]="post?.content"
-      required
-      #content="ngModel"
+      formControlName="content"
       placeholder="Post content"></textarea>
-      <mat-error *ngIf="content.invalid">Please enter a post content</mat-error>
+      <mat-error *ngIf="form.get('content').invalid">Please enter a post content</mat-error>
     </mat-form-field>
     <button mat-raised-button
     color="primary"
