--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -19,3 +19,7 @@ mat-spinner{
    width: 100%;
    box-shadow: 5px 5px 5px 1px rgba(93,75,227,0.75);
  }
+
+ mat-paginator {
+   margin-top: 1rem;
+ }
