--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
       <a mat-button routerLink="/signup" routerLinkActive="mat-accent">Signup</a>
     </li>
     <li *ngIf="userIsAuthenticated">
-      <button mat-button>Sign out</button>
+      <button mat-button (click)="onLogOut()">Sign out</button>
     </li>
   </ul>
 </mat-toolbar>
